feat: add extra features
